@@ -2,11 +2,16 @@ package jmx
 
 import (
 	"encoding/json"
+	"strings"
 
 	"github.com/joeshaw/multierror"
 	"github.com/pkg/errors"
 
 	"github.com/elastic/beats/libbeat/common"
+)
+
+const (
+	mbeanEventKey = "mbean"
 )
 
 type Entry struct {
@@ -47,56 +52,123 @@ type Entry struct {
 //        "status": 200
 //     }
 //  ]
-func eventMapping(content []byte, mapping map[string]string) (common.MapStr, error) {
+//
+// With wildcards there is an additional nesting level:
+//
+//  [
+//     {
+//        "request": {
+//           "type": "read",
+//           "attribute": "maxConnections",
+//           "mbean": "Catalina:name=*,type=ThreadPool"
+//        },
+//        "value": {
+//           "Catalina:name=\"http-bio-8080\",type=ThreadPool": {
+//              "maxConnections": 200
+//           },
+//           "Catalina:name=\"ajp-bio-8009\",type=ThreadPool": {
+//              "maxConnections": 200
+//           }
+//        },
+//        "timestamp": 1519409583
+//        "status": 200,
+//     }
+//  }
+type eventKey struct {
+	mbean, event string
+}
+
+func eventMapping(content []byte, mapping AttributeMapping) ([]common.MapStr, error) {
 	var entries []Entry
 	if err := json.Unmarshal(content, &entries); err != nil {
 		return nil, errors.Wrapf(err, "failed to unmarshal jolokia JSON response '%v'", string(content))
 	}
 
-	event := common.MapStr{}
+	// Generate a different event for each wildcard mbean, and and additional one
+	// for non-wildcard requested mbeans, group them by event name if defined
+	mbeanEvents := make(map[eventKey]common.MapStr)
 	var errs multierror.Errors
 
 	for _, v := range entries {
+		hasWildcard := strings.Contains(v.Request.Mbean, "*")
 		for attribute, value := range v.Value {
-			// Extend existing event
-			err := parseResponseEntry(v.Request.Mbean, attribute, value, event, mapping)
-			if err != nil {
-				errs = append(errs, err)
+			if !hasWildcard {
+				err := parseResponseEntry(v.Request.Mbean, v.Request.Mbean, attribute, value, mbeanEvents, mapping)
+				if err != nil {
+					errs = append(errs, err)
+				}
+				continue
+			}
+
+			// If there was a wildcard, we are going to have an additional
+			// nesting level in response values, and attribute here is going
+			// to be actually the matching mbean name
+			values, ok := value.(map[string]interface{})
+			if !ok {
+				errs = append(errs, errors.Errorf("expected map of values for %s", v.Request.Mbean))
+				continue
+			}
+
+			responseMbean := attribute
+			for attribute, value := range values {
+				err := parseResponseEntry(v.Request.Mbean, responseMbean, attribute, value, mbeanEvents, mapping)
+				if err != nil {
+					errs = append(errs, err)
+				}
 			}
 		}
 	}
 
-	return event, errs.Err()
+	var events []common.MapStr
+	for _, event := range mbeanEvents {
+		events = append(events, event)
+	}
+
+	return events, errs.Err()
+}
+
+func selectEvent(events map[eventKey]common.MapStr, key eventKey) common.MapStr {
+	event, found := events[key]
+	if !found {
+		event = common.MapStr{}
+		if key.mbean != "" {
+			event.Put(mbeanEventKey, key.mbean)
+		}
+		events[key] = event
+	}
+	return event
 }
 
 func parseResponseEntry(
-	mbeanName string,
+	requestMbeanName string,
+	responseMbeanName string,
 	attributeName string,
-	attibuteValue interface{},
-	event common.MapStr,
-	mapping map[string]string,
+	attributeValue interface{},
+	events map[eventKey]common.MapStr,
+	mapping AttributeMapping,
 ) error {
-	// Create metric name by merging mbean and attribute fields.
-	var metricName = mbeanName + "_" + attributeName
-
-	key, exists := mapping[metricName]
+	field, exists := mapping.Get(requestMbeanName, attributeName)
 	if !exists {
-		return errors.Errorf("metric key '%v' not found in response", metricName)
+		return errors.Errorf("metric key '%v' not found in response (%+v)", attributeName, mapping)
 	}
 
-	var err error
+	var key eventKey
+	key.event = field.Event
+	if responseMbeanName != requestMbeanName {
+		key.mbean = responseMbeanName
+	}
+	event := selectEvent(events, key)
 
 	// In case the attributeValue is a map the keys are dedotted
-	c, ok := attibuteValue.(map[string]interface{})
+	data := attributeValue
+	c, ok := data.(map[string]interface{})
 	if ok {
 		newData := map[string]interface{}{}
 		for k, v := range c {
 			newData[common.DeDot(k)] = v
 		}
-		_, err = event.Put(key, newData)
-	} else {
-		_, err = event.Put(key, attibuteValue)
+		data = newData
 	}
-
+	_, err := event.Put(field.Field, data)
 	return err
 }
